--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
   test: 
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repositiory code
+    - name: Checkout repository code
       uses: actions/checkout@v3
 
     - name: Set up Python
@@ -17,10 +17,9 @@ jobs:
         python-version: '3.13.1'
 
     - name: Install project dependencies
-      run: 
+      run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run tests
-      run:
-        pytest -v
+      run: pytest -v
